# yaml-language-server: $schema=https://json.schemastore.org/pyproject.json

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "live-content-parser"
version = "0.0.0"
description = "Parse content into other formats instantly."
authors = [{name = "billwallis"}]
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "poethepoet>=0.42.1",
    "pre-commit>=4.5.1",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]


[tool.poe]
verbosity = -1
envfile.optional = ".env"

[tool.poe.tasks]
install.shell = """
    pip install --requirement requirements.txt --editable .
    pre-commit install --install-hooks
"""
upgrade.shell = """
    pip install --editable . --group dev --group test
    pre-commit autoupdate
"""
lock.shell = """
    pip freeze --exclude-editable > requirements.txt
"""
test = "pytest -vvv"

[tool.poe.tasks.lint]
control.expr = "sys.platform"

[[tool.poe.tasks.lint.switch]]
case = "win32"
shell = """
    echo '=== pre-commit checks ==='
    SKIP=identity pre-commit run --all-files --hook-stage pre-commit
    echo '=== pre-push checks ==='
    SKIP=identity pre-commit run --all-files --hook-stage pre-push
"""

[[tool.poe.tasks.lint.switch]]
shell = """
    echo '\\033[0;34mpre-commit checks\\033[0m'
    SKIP=identity pre-commit run --all-files --hook-stage pre-commit
    echo '\\033[0;34mpre-push checks\\033[0m'
    SKIP=identity pre-commit run --all-files --hook-stage pre-push
"""


[tool.pytest.ini_options]
addopts = "--cov=src --cov-fail-under=100"
testpaths = ["tests"]
